# MidiPlayer

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: library.cmake
docs/: 8通道扩展方案.md  PC_MIDI_Player_设计方案.md  STM32F103_MIDI_Player_方案设计.md  Visualizer_性能优化方案.md  Visualizer_整改方案.md
examples/stm32f103/: CMakeLists.txt  main.c  main.cpp  midi_data.h  port_stm32f103.c  port_stm32f103.h
examples/stm32f103/platform/stm32f10x/ArduinoAPI/: WireBase.cpp
examples/stm32f103/platform/stm32f10x/CMSIS/Device/: stm32f10x_conf.h
examples/stm32f103/platform/stm32f10x/Config/: mcu_config.h
examples/stm32f103/platform/stm32f10x/Core/: HardwareSerial.cpp  SPI.cpp  delay.c  exti.c  fault_handler.c  mcu_core.c  syscalls.c  timer.c
examples/stm32f103/platform/stm32f10x/Startup/: STM32F103C8_FLASH.ld  STM32F103XE_FLASH.ld
scripts/: midi_converter.py  midi_player.py  midi_to_header.py
source/: mp_envelope.c  mp_envelope.h  mp_note_table.c  mp_note_table.h  mp_osc.c  mp_osc.h  mp_player.c  mp_player.h  mp_port.c  mp_port.h  mp_sequencer.c  mp_sequencer.h
tests/: CMakeLists.txt  mock_port.c  mock_port.h  run_tests.sh  test_envelope.c  test_framework.c  test_framework.h  test_main.c  test_note_table.c  test_osc.c  test_player.c  test_sequencer.c
tools/: cmake_format.sh  code_format.sh  flash.sh  load_midi.sh  midi_to_header.py  python_format.sh  requirements-dev.txt  requirements.txt  setup_env.sh
tools/player/: __init__.py  __main__.py  envelope.py  instruments.py  mixer.py  oscillator.py  sequencer.py  visualizer.py
tools/tests/: __init__.py  run_tests.py  test_envelope.py  test_instruments.py  test_mixer.py  test_oscillator.py  test_sequencer.py  test_visualizer.py
